Create a Debian package
Signed-off-by: Nicolas Iooss <nicolas.iooss_git@polytechnique.org>

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,11 @@ nosetests.xml
 # Temporary files
 *~
 .*.swp
+
+# Debian package
+/debian/*.log
+/debian/*.debhelper
+/debian/*.substvars
+/debian/files
+/debian/kaoz-clients
+/debian/tmp
